[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=4.0", "empack>=3,<4"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["share/jupyter/labextensions/@jupyterlite/xeus-python-kernel/static/style.js"]
ensured-targets = ["share/jupyter/labextensions/@jupyterlite/xeus-python-kernel/static/style.js", "share/jupyter/labextensions/@jupyterlite/xeus-python-kernel/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["share/jupyter/labextensions/@jupyterlite/xeus-python-kernel/**", "yarn.lock", ".*", "package-lock.json", "src/xpython_wasm.js", "src/xpython_wasm.wasm", "src/*.tar.gz", "src/*.js", "src/worker.ts", "src/web_worker_kernel.ts", "*.sh"]

[tool.jupyter-releaser.options]
skip = ["check-links"]

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install jupyterlab~=4.0 empack~=3.0 jupyter_packaging~=0.10",
    "jlpm",
    "jlpm build:prod",
]
