[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "empack>=3.0,<4", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "jupyterlite-xeus-python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "traitlets",
    "jupyterlite-core>=0.2.0a1,<0.3",
    "requests",
    "empack>=3.1,<4",
    "typer",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.scripts]
jupyterlite-xeus-python-build = "jupyterlite_xeus_python.build:start"

[project.entry-points."jupyterlite.addon.v0"]
jupyterlite-xeus-python = "jupyterlite_xeus_python.env_build_addon:XeusPythonEnv"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyterlite_xeus_python/labextension"]
exclude = [".github"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlite_xeus_python/labextension" = "share/jupyter/labextensions/@jupyterlite/xeus-python-kernel"
"install.json" = "share/jupyter/labextensions/@jupyterlite/xeus-python-kernel/install.json"

[tool.hatch.build.hooks.version]
path = "jupyterlite_xeus_python/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlite_xeus_python/labextension/static/style.js",
    "jupyterlite_xeus_python/labextension/package.json",
]
skip-if-exists = ["jupyterlite_xeus_python/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyterlite_xeus_python/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5' empack~=3.0",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]
