[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "empack>=3.0,<4", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "jupyterlite-xeus-python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "traitlets",
    "jupyterlite-core>=0.2.0rc0,<0.3",
    "requests",
    "empack>=3.1,<4",
    "typer",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
dev = [
    "black",
    "ruff==0.0.292",
]

[project.scripts]
jupyterlite-xeus-python-build = "jupyterlite_xeus_python.build:start"

[project.entry-points."jupyterlite.addon.v0"]
jupyterlite-xeus-python = "jupyterlite_xeus_python.env_build_addon:XeusPythonEnv"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyterlite_xeus_python/labextension"]
exclude = [".github"]

[tool.hatch.build.targets.wheel]
artifacts = ["jupyterlite_xeus_python/labextension"]
include = ["jupyterlite_xeus_python/"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlite_xeus_python/labextension" = "share/jupyter/labextensions/@jupyterlite/xeus-python-kernel"
"install.json" = "share/jupyter/labextensions/@jupyterlite/xeus-python-kernel/install.json"

[tool.hatch.build.hooks.version]
path = "jupyterlite_xeus_python/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlite_xeus_python/labextension/static/style.js",
    "jupyterlite_xeus_python/labextension/static/empack_env_meta.json",
    "jupyterlite_xeus_python/labextension/static/xpython_wasm.js",
    "jupyterlite_xeus_python/labextension/static/xpython_wasm.wasm",
    "jupyterlite_xeus_python/labextension/package.json",
]
skip-if-exists = ["jupyterlite_xeus_python/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyterlite_xeus_python/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5' empack~=3.0",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
target-version = "py38"
exclude = [
    "*/tests/*",
    "docs",
]
line-length = 100
select = [
  "A", "B", "C", "DTZ", "E", "EM", "F", "FBT", "I", "ICN", "ISC", "N",
  "PLC", "PLE", "PLR", "PLW", "Q", "RUF", "S", "SIM", "T", "TID", "UP",
  "W", "YTT",
]
ignore = [
  "D100",
  "D104",
  # Q000 Single quotes found but double quotes preferred
  "Q000",
  # FBT001 Boolean positional arg in function definition
  "FBT001", "FBT002", "FBT003",
  # C408 Unnecessary `dict` call (rewrite as a literal)
  "C408", "C416",
  # allow for using print()
  "T201",
  # PLR0913 Too many arguments to function call
  "PLR0913",
  # extended flake8 ignore
  "D104", "D100", "EM101",
  # Probable insecure usage of temporary file or directory
  "S108",
  # RUF012 Mutable class attributes should be annotated with `typing.ClassVar`
  "RUF012",
]

[tool.ruff.per-file-ignores]
# S101 Use of `assert` detected
# F841 Local variable `foo` is assigned to but never used
# PLR2004 Magic value used in comparison
"tests/*" = ["S101", "F841", "PLR2004"]

# B008 Do not perform function call `typer.Option` in argument defaults
# E501 Line too long
# S603 `subprocess` call: check for execution of untrusted input
"jupyterlite_xeus_python/build.py" = ["B008", "E501", "S603"]

# E501 Line too long
# S602 `subprocess` call with `shell=True` identified, security issue
"ui-tests/build.py" = ["E501", "S602"]
